# wgpu-tutor

./: .dockerignore  .gitignore  .markdownlint.json  README.md  book.toml  compose.yaml  extra-style.css  package-lock.json  package.json  tag-replacer.js  webpack.config.js
.github/workflows/: deploy.yml
deploy/: mdbook.dockerfile
src/: README.md  SUMMARY.md
src/wgpu/: README.md
src/wgpu/beginner/: README.md  pixel.md  shader.md  triangle.md
src/wgpu/infra/: README.md  graphics.md  init.md  wgpu.md
src/wgpu/window/: event.md  interval.md  window.md
src/window/: README.md  event.md  interval.md  window.md
theme/: index.hbs
websrc/: index.js
wgpu-tutor-src/: Cargo.toml
wgpu-tutor-src/examples/: triangle-pixel.rs  triangle.rs  wgpu-init.rs  window.rs
wgpu-tutor-src/examples/triangle/: triangle-pixel.wgsl  triangle.wgsl
