[package]
name = "wgpu-tutor-src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
winit = { version = "0.29", features = ["rwh_05"], default-features = false }
wgpu = "0.18"
pollster = "0.3"
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
cgmath = "0.18"
