[package]
name = "wgpu-tutor-src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
winit = "0.29"
wgpu = "0.19.1"
pollster = "0.3"
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
cgmath = "0.18"
